[package]
name = "super-vm"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

#[build]
#rustflags = ["--out-dir=./dist"]

[dependencies]
borsh= { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { path="./sdk", features = ["no-entrypoint"] }
super-lib = { path="./super-lib", features = ["super"] }
actix = "0.13.2"
actix-web = "4.5.1"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.1"
serde_json = "1.0.3"
json = "0.9.1"
lazy_static = "1.4.0"
data-manager = {path = "./data-manager"}
bs58 = { workspace = true }
futures = "0.3.30"
sha256 = "1.5.0"
piper = {path = "./piper", features = ["super"]}
solana-sdk = "1.18.4"
base64 = { workspace=true}
generic-array = { workspace = true, features = ["serde", "more_lengths"] }
serde_with = { workspace = true, features = ["macros", "base64"] }
hex = "0.3.1"

[workspace]
members = ["super-lib", "piper", "data-manager", "sdk", "spawner", "executor",
    "contracts/system-program",
    "contracts/test-contract",
    "contracts/spl-token"
]


[workspace.dependencies]
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
bs58 = "0.3.1"
redb = "1.5.0"

solana-porgram = { path = "./sdk"}
solana-frozen-abi = "1.18.4"
solana-frozen-abi-macro = "1.18.4"
solana-sdk-macro =  "1.18.4"
solana-logger = "1.18.4"


Inflector = "0.11.4"
aquamarine = "0.3.3"
aes-gcm-siv = "0.10.3"
ahash = "0.8.7"
anyhow = "1.0.79"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.7"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-mutex = "1.4.0"
async-trait = "0.1.77"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.21.6"
bincode = "1.3.3"
bitflags = { version = "2.3.3", features = ["serde"] }
blake3 = "1.5.0"
block-buffer = "0.10.4"
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.7"
bytemuck = "1.14.0"
byteorder = "1.5.0"
bytes = "1.5"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cc = "1.0.83"
chrono = { version = "0.4.31", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.15.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.32"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.11"
csv = "1.3.0"
ctrlc = "3.4.2"
curve25519-dalek = "3.2.1"
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
either = "1.9.0"
enum-iterator = "1.4.1"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.28"
fnv = "1.0.7"
fs-err = "2.11.0"
fs_extra = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.29"
gag = "1.0.0"
generic-array = { version = "0.14.7", default-features = false }
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
hex = "0.4.3"
hidapi = { version = "2.4.1", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.11"
humantime = "2.0.1"
hyper = "0.14.28"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.11"
indexmap = "2.1.0"
indicatif = "0.17.7"
itertools = "0.10.5"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.66"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-server-utils = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.152"
libloading = "0.7.4"
libsecp256k1 = "0.6.0"
light-poseidon = "0.2.0"
log = "0.4.20"
lru = "0.7.7"
lz4 = "1.24.0"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.26.4"
num-bigint = "0.4.4"
num_cpus = "1.16.0"
num_enum = "0.7.2"
openssl = "0.10"
ouroboros = "0.15.6"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
pkcs8 = "0.8.0"
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.2.1"
proc-macro2 = "1.0.76"
proptest = "1.4"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.10.2"
quinn-proto = "0.10.6"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
raptorq = "1.8.0"
rayon = "1.8.0"
rcgen = "0.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", default-features = false }
rolling-file = "0.2.0"
rpassword = "7.3"
rustc_version = "0.4"
rustls = { version = "0.21.10", default-features = false, features = ["quic"] }
rustversion = "1.0.14"
scopeguard = "1.2.0"
semver = "1.0.21"
seqlock = "0.2.0"
serde = "1.0.195"
serde_bytes = "0.11.14"
serde_derive = "1.0.103"
serde_json = "1.0.111"
serde_with = { version = "2.3.3", default-features = false }
serde_yaml = "0.9.30"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.4"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smallvec = "1.11.2"
smpl_jwt = "0.7.1"
socket2 = "0.5.5"
soketto = "0.7"
solana-nohash-hasher = "0.2.1"
solana_rbpf = "=0.8.0"
spl-associated-token-account = "=2.3.0"
spl-instruction-padding = "0.1"
spl-memo = "=4.0.0"
spl-pod = "=0.1.0"
spl-token = "=4.0.0"
spl-token-2022 = "=1.0.0"
spl-token-group-interface = "=0.1.0"
spl-token-metadata-interface = "=0.2.0"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.4.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.40"
tarpc = "0.29.0"
tempfile = "3.9.0"
test-case = "3.3.1"
thiserror = "1.0.56"
tiny-bip39 = "0.8.2"
# Update solana-tokio patch below when updating this version
tokio = "1.29.1"
tokio-serde = "0.8"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.1"
tokio-util = "0.6"
toml = "0.8.8"
tonic = "0.9.2"
tonic-build = "0.9.2"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.3", default-features = false }
zstd = "0.11.2"