[package]
name = "executor"
version = "0.1.0"
edition = "2021"


[dependencies]
super-lib = { path = "../super-lib", features = ["executor"] }
program-manager = { path = "../program-manager", features = ["executor"] }
piper = { path="../piper", features = ["executor"] }
solana-program = { path="../sdk", features = ["no-entrypoint"]}
borsh= { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }


[features]
default = []
reported = []