[package]
name = "piper"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
borsh= { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
super-lib = { path = "../super-lib" }


[features]
default = ["virtual", "executor", "super"]
virtual = ["super-lib/virtual"]
executor= ["super-lib/executor"]
super = ["super-lib/super"]
