[package]
name = "spawner"
version = "0.1.0"
edition = "2021"


[dependencies]
libloading = "0.8"
super-lib = { path = "../super-lib", features = ["virtual"] }
piper = { path = "../piper", features = ["virtual"] }
solana-program = { path = "../sdk", features = ["no-entrypoint"] }
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
