[package]
name = "system-program"
version = "1.0.0"
edition = "2021"


[dependencies]
borsh= { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-program = { path = "../../sdk" }
thiserror = "1.0.47"
lazy_static = "1.4.0"


[lib]
crate-type = ["cdylib", "lib"]
