[package]
name = "test-contract"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
borsh = "0.9.3"
thiserror = "1.0.47"
solana-program = {path = "../../sdk", features = ["solvm"]}


[dependencies.num-derive]
version = "0.4.0"

[dependencies.num-traits]
version = "0.2.16"
